manifests/things/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: things
spec:
  ports:
  - name: mosquitto
    port: 1883
    targetPort: mosquitto
  selector:
    app: mosquitto
